--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,7 +12,7 @@
 <!--轮播图-->
 <view class="swiper-container">
   <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{duration}}" current="{{swiperCurrent}}" bindchange="swiperChange" class="swiper">
-    <block wx:for="{{imgUrls}}" wx:key="3*this">
+    <block wx:for="{{imgUrls}}" wx:key="id">
       <swiper-item>
         <image src="{{item.swiperImgSrc}}" class="img" bindtap="swipclick" />
       </swiper-item>
